[gd_scene load_steps=4 format=3 uid="uid://toof68g4e5mf"]

[ext_resource type="Script" path="res://Control12.gd" id="1_5qqu5"]
[ext_resource type="FontFile" uid="uid://cu1b0xcfhq0l" path="res://assets/retro.ttf" id="2_et2p2"]
[ext_resource type="Script" path="res://LineEdit.gd" id="3_3sye4"]

[node name="Level12" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5qqu5")

[node name="Button" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "help
"

[node name="LineEdit" type="LineEdit" parent="Control"]
z_index = 1
custom_minimum_size = Vector2(280, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = 101.0
offset_right = 140.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_et2p2")
theme_override_font_sizes/font_size = 40
max_length = 8
caret_blink = true
script = ExtResource("3_3sye4")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="LevelNumber" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 36.0
offset_right = 20.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_et2p2")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Phyletic" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.0
offset_top = 369.0
offset_right = 157.0
offset_bottom = 420.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_et2p2")
theme_override_font_sizes/font_size = 40
text = "a c e l r s t"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/Button" to="Control" method="_on_button_pressed"]
[connection signal="text_submitted" from="Control/LineEdit" to="Control" method="_on_line_edit_text_submitted"]
